<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="contract">Пользовательское соглашение</string>
    <string name="link_to_praktikum">https://practicum.yandex.ru/android-developer/</string>
    <string name="title_share">Поделиться через</string>
    <string name="support_mail">verigindanya@yandex.ru</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_offer">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="trouble_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_search">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="youSearch">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="test_time">00:00</string>
    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favourite_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_mediateka">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="title">Название*</string>
    <string name="desc">Описание</string>
    <string name="title_dialog_exit">Завершить создание плейлиста?</string>
    <string name="message_dialog_exit">Все несохраненные данные будут потеряны</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="ok">Завершить</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="toast_track_added">Добавлено в плейлист %s</string>
    <string name="toast_track_already_exists">Трек уже добавлен в плейлист %s</string>
    <string name="toast_playlist_created">Плейлист %s создан</string>
    <string name="title_dialog_delete">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="empty_playlist_tracks">В этом плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="share_playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_confirm">Удалить</string>
    <string name="titleEditPlaylist">Редактировать</string>
    <string name="saveEditPlaylist">Сохранить</string>
</resources>
