<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="?attr/colorPrimary"
    style="@style/LayoutVertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_settings"
        app:title="@string/settings"
        app:titleTextAppearance="@style/MaterialToolBar.Settings.Title"
        style="@style/MaterialToolBar"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="@string/theme"
        style="@style/Switcher"
        />

    <TextView
        android:id="@+id/share"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share"
        style="@style/TextViewDefault.Text"/>

    <TextView
        android:id="@+id/support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support"
        style="@style/TextViewDefault.Text"/>

    <TextView
        android:id="@+id/contract"
        android:text="@string/contract"
        app:drawableEndCompat="@drawable/contract"
        style="@style/TextViewDefault.Text"/>

</LinearLayout>