<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/colorPrimary"
    style="@style/LayoutVertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <TextView
        android:id="@+id/titleFragment"
        android:text="@string/settings"
        style="@style/TextViewTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="@string/theme"
        app:thumbTint="@color/thumbSwitch"
        app:trackTint="@color/trackTint"
        style="@style/Switcher" />

    <TextView
        android:id="@+id/share"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share"
        style="@style/TextViewDefault.Text"/>

    <TextView
        android:id="@+id/support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support"
        style="@style/TextViewDefault.Text"/>

    <TextView
        android:id="@+id/contract"
        android:text="@string/contract"
        app:drawableEndCompat="@drawable/contract"
        style="@style/TextViewDefault.Text"/>

</LinearLayout>