<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".playlist.ui.fragment.CreatePlaylistFragment">

    <ImageButton
        android:id="@+id/backArrow"
        style="@style/LayoutWrap"
        app:srcCompat="@drawable/back"
        android:background="?attr/colorPrimary"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titlePlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/backArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/new_playlists"
        style="@style/TextViewTitle"
        android:layout_marginStart="@dimen/dp_12"/>

    <FrameLayout
        android:id="@+id/place_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrow"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintDimensionRatio="1:1"
        android:clickable="true"
        android:background="@drawable/border_playlist">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/selectedImage"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shapeAppearanceOverlay="@style/RoundedPlaylistImage"
            tools:src="@tools:sample/avatars"/>

        <ImageView
            android:id="@+id/defaultImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/picture_playlist"/>

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterTitleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:hint="@string/title"
        android:textColorHint="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:boxCornerRadiusTopStart="@dimen/dp_4"
        app:boxCornerRadiusTopEnd="@dimen/dp_4"
        app:boxCornerRadiusBottomEnd="@dimen/dp_4"
        app:boxCornerRadiusBottomStart="@dimen/dp_4"
        app:boxStrokeColor="@color/edit_text_stroke_color"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/place_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_18"
            android:paddingBottom="@dimen/dp_19"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterDescriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterTitleLayout"
        app:boxStrokeColor="@color/edit_text_stroke_color"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="?attr/colorPrimary"
        android:hint="@string/desc"
        android:textColorHint="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:boxCornerRadiusTopStart="@dimen/dp_4"
        app:boxCornerRadiusTopEnd="@dimen/dp_4"
        app:boxCornerRadiusBottomEnd="@dimen/dp_4"
        app:boxCornerRadiusBottomStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_18"
            android:paddingBottom="@dimen/dp_19"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:backgroundTint="@color/button_create_color"
        android:layout_marginBottom="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_17"
        android:enabled="false"
        style="@style/ButtonCreatePlaylist"
        />

</androidx.constraintlayout.widget.ConstraintLayout>